Clean-up console commands
Changes:
- Add a getBooleanInput to the Context to cover a common use case
- Update Console commands to use new method
- User Stream toList where possible